[Add] - new my project. [Fix] - content web on mobile screen.

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 }
 
 #root {
+  width: 100vw;
   background-color: #1e1e1d;
 }
 
